--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
     "oauth-1.0a": "^2.2.6",
