feat: Remove deprecated node_modules symlink and add comprehensive documentation for architecture, Facebook and Threads integration setup, MongoDB Atlas troubleshooting, and project status.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,9 @@
 PORT=4000
 NODE_ENV=development
 
-# MongoDB
+# MongoDB (local or Atlas)
+# Local: mongodb://127.0.0.1:27017/blazly
+# Atlas: mongodb+srv://USER:PASSWORD@cluster0.xxxxx.mongodb.net/blazly?retryWrites=true&w=majority
 MONGO_URI=mongodb://127.0.0.1:27017/blazly
 
 # Frontend URL (for OAuth redirect and CORS)
@@ -21,12 +23,6 @@ LINKEDIN_REDIRECT_URI=http://localhost:5173/api/auth/linkedin/callback
 LINKEDIN_APP_DAILY_LIMIT=100
 LINKEDIN_USER_DAILY_LIMIT=15
 
-# Reddit (create app at https://www.reddit.com/prefs/apps — choose "web app" type)
-REDDIT_CLIENT_ID=your_reddit_client_id
-REDDIT_CLIENT_SECRET=your_reddit_client_secret
-REDDIT_REDIRECT_URI=http://localhost:5173/api/auth/integrations/reddit/callback
-REDDIT_USER_AGENT=web:blazly:v1.0.0 (by /u/youruser)
-
 # Instagram (uses Facebook Login — same Facebook App or separate)
 # Requires: instagram_basic, instagram_content_publish, pages_show_list scopes
 # Instagram Business/Creator account must be linked to a Facebook Page
@@ -36,3 +32,11 @@ INSTAGRAM_REDIRECT_URI=http://localhost:5173/api/auth/integrations/instagram/cal
 
 # Session secret (use a long random string in production)
 SESSION_SECRET=your_session_secret_here
+
+# Gemini API (content generation + image keyword for fallback)
+GEMINI_API_KEY=your_gemini_api_key
+
+# Image URLs – leave empty for local (returns /uploads/xxx, frontend proxies to backend)
+# S3: UPLOAD_BASE_URL=https://your-bucket.s3.region.amazonaws.com/uploads
+# Firebase: UPLOAD_BASE_URL=https://firebasestorage.googleapis.com/v0/b/your-bucket/o
+UPLOAD_BASE_URL=
