--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.3",
+    "cheerio": "^1.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -20,9 +21,14 @@
     "express-session": "^1.17.3",
     "firebase": "^12.9.0",
     "firebase-admin": "^13.6.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.3",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "oauth-1.0a": "^2.2.6",
     "uuid": "^9.0.1"
+  },
+  "overrides": {
+    "undici": "^6.21.0"
   }
 }
